# Game-News-Recommendation-System

./: .gitignore  README.md
development/data/crawling/gameMeca/: game_meca_crawling.py  news_data_10.json  news_data_11.json  news_data_12.json  news_data_13.json  news_data_14.json  news_data_7.json  news_data_8.json  news_data_9.json  nohup.out
development/data/crawling/realtime.parquet/: .part-00000-889aca19-7d9c-4106-8641-aee807fbcd57-c000.snappy.parquet.crc  .part-00001-889aca19-7d9c-4106-8641-aee807fbcd57-c000.snappy.parquet.crc  .part-00002-889aca19-7d9c-4106-8641-aee807fbcd57-c000.snappy.parquet.crc  .part-00003-889aca19-7d9c-4106-8641-aee807fbcd57-c000.snappy.parquet.crc  .part-00004-889aca19-7d9c-4106-8641-aee807fbcd57-c000.snappy.parquet.crc  .part-00005-889aca19-7d9c-4106-8641-aee807fbcd57-c000.snappy.parquet.crc  .part-00006-889aca19-7d9c-4106-8641-aee807fbcd57-c000.snappy.parquet.crc  .part-00007-889aca19-7d9c-4106-8641-aee807fbcd57-c000.snappy.parquet.crc  .part-00008-889aca19-7d9c-4106-8641-aee807fbcd57-c000.snappy.parquet.crc  (+391 more)
development/data/crawling/thisIsGame/: nohup.out  (+1 more)
development/data/pjt07/: .gitignore  RAG.py  README.md  all_articles_to_json.py  check_df.py  crawling_to_hdfs.py  dashboard.py  nohup.out  parquet_category_to_json.py  parquet_processing.py  pyproject.toml  spark_streaming_server.py
development/game_news_web/: build_run.sh
development/game_news_web/backend/: README.md
development/game_news_web/frontend/: README.md  package-lock.json  package.json  vue.config.js
devleopment/game_news_web/frontend/: vue.config.js
(+31 files in other folders)
