[tool.poetry]
name = "ssafy-custom-news-data"
version = "0.1.0"
description = ""
authors = ["jiwoochris <travelandi01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.3"
hdfs = "^2.7.3"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
wordcloud = "^1.9.3"
nltk = "^3.9.1"
tiktoken = "^0.8.0"
openai = "^1.55.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
sentence-transformers = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
